# TinyFootBall

./: .gitignore  CMakeLists.txt  README.md
SDL2/project/: .gitignore  README.md
SDL2/project/src/: main.cpp
src/: main.cpp
